<resources>
    <string name="app_name">ProfessionalLearning</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_str">已获%d分/每日上限5分</string>
    <string name="everyday_per_str1">已获%s分/每日上限5分</string>
    <string name="everyday_per_str2">已获%s分/每日上限6分</string>
    <string name="challenge_high_score">历史最高答对%d题</string>
    <string name="challenge_current_score">本次答对%d题</string>
    <string name="answer_accuracy">正确率：%s</string>
    <string name="answer_false_num">错题数：%d</string>
    <string name="answer_per">积分：+%d</string>
    <string name="rank_str">段位：%s</string>
    <string name="reply_num">%d回复</string>
    <string name="set_pas">请设置密码</string>
    <string name="pas_use_login">密码用于登录</string>
    <string name="pas">密码</string>
    <string name="please_input_pas">请输入密码</string>
    <string name="num_or_letter">需6–20位字母或数字</string>
    <string name="next_step">下一步</string>
    <string name="alter_phone_num">更改手机号码</string>
    <string name="phone_num">手机号码</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="please_input_verify">请输入验证码</string>
    <string name="get_verify">获取验证码</string>
    <string name="answer_correct_num">本次答对题目数</string>
    <string name="answer_again">再来一组</string>
    <string name="back">返回</string>
    <string name="daily_answer">每日答题</string>
    <string name="daily_answer_mes">太阳每天都是新的</string>
    <string name="award_score">奖励积分</string>
    <string name="zero">00</string>
    <string name="answer_num">答题次数</string>
    <string name="week_answer">每周答题</string>
    <string name="week_answer_mes">周而复始，如期而至</string>
    <string name="special_answer">专项答题</string>
    <string name="special_answer_mes">术业有专攻，道义有精论</string>
    <string name="challenge_answer">挑战答题</string>
    <string name="challenge_answer_mes">挑战你的能力，给你超越的机会</string>
    <string name="_30">30</string>
    <string name="challenge_again">再来一局</string>
    <string name="well_done">非常棒，继续加油哦！</string>
    <string name="collect">收藏</string>
    <string name="button_sure">确认</string>
    <string name="button_tips">查看提示</string>
    <string name="fill_base_mes">填写基本信息</string>
    <string name="text_name">姓名</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="button_enter">进入</string>
    <string name="release">发布</string>
    <string name="cancel">取消</string>
    <string name="welcome_review">欢迎发表你的观点</string>
    <string name="review">观点</string>
    <string name="all_rank">您在全国的总排名</string>
    <string name="your_rank">您的段位</string>
    <string name="your_score">成长总积分</string>
    <string name="go_answer">去答题</string>
    <string name="_1_1">每次答对1道积1分</string>
    <string name="_1_1_not_repetition">每组答题每答对1道积1分，同组答题不重复积分</string>
    <string name="go_see">去看看</string>
    <string name="_1_one_video">1分/每有效视听/观看一个</string>
    <string name="video_learn">视听学习</string>
    <string name="_1_one_article">1分/每有效阅读一篇</string>
    <string name="read_article">阅读文章</string>
    <string name="score_rule">积分规则</string>
    <string name="find_pas">找回密码</string>
    <string name="new_user_register">新用户注册</string>
    <string name="login">登录</string>
    <string name="done">完成</string>
    <string name="small_test">小测试</string>
    <string name="button_analysis">查看解析</string>
    <string name="button_again">再来一次</string>
    <string name="answer_score">本次作答分数</string>
    <string name="my_mes">我的信息</string>
    <string name="alter_pas">更改登录密码</string>
    <string name="exit_login">退出登录</string>
    <string name="user_name">昵称</string>
    <string name="_00_00">00:00</string>
    <string name="exercise_again">再练一次</string>
    <string name="correct_answer">正确答案：</string>
    <string name="answer_analysis">答案解析</string>
    <string name="fill_bank">填空题</string>
    <string name="multiple_choice">多选题</string>
    <string name="single_choice">单选题</string>
    <string name="my_collect">我的收藏</string>
    <string name="learn_form">学习报表</string>
    <string name="learn_score">学习积分</string>
    <string name="to_answer">我要答题</string>
    <string name="score">积分</string>
    <string name="collect_time">收藏时间：</string>
    <string name="start_answer">开始答题</string>
</resources>
